Changelog
=========

6.8-dev - (unreleased)
----------------------
* Bug fix: added a possibility to simplify the schemata_edit form, to not
  include so many items such as a header and type description
  [tiberich #14562]

6.7 - (2013-05-20)
------------------
* Bug fix: fixed ReST merkup under HISTORY.txt
  [ghicaale refs #14554]

6.6 - (2013-05-20)
------------------
* Bug fix: show a visual cue that a wait time might be needed when editing a
  content object in a popup dialog, in the eea.relations popup
  [tiberich #14467]
* Feature: index all subjects/keywords lowercase
  [ghicaale refs #14384]
* Feature: store all subjects/keywords lowercase
  [ghicaale refs #14384]
* Upgrade step:
   - re-save (re-index 'Subject' index) all content types from the portal via a script from /www/0maintenance
   - this operation should be done via www8 instance, using intermediate transaction commits as it will be a very long process
   - ideally to be done outside EEA workin hours not to conflict with current editing
   - based on /www/0maintenance/.find-searchareas-using-subject report update all collections/facetednav to use lowercase subjects
   - [ghicaale refs #14384]
* Change: refactor marshaller.py to conform to eea.versions API changes,
  change tests to reflect the fact that random objects are no longer versionable by
  default
  [tiberich #14008]
* Upgrade step:
   - If #14383 is not closed, ask Alec/Antonio first to run this step
   - Within "Plone > Site setup > Add-ons" click on upgrade button available for EEA Content Types (must pe run under www8)
   - [voineali refs #9552]
* Cleanup: Remove "eea.related_multimedia" viewlet
  [voineali refs #9552]
* Added upgrade to cleanup tags
  [ghicaale refs #14383]
* Feature: Removed lovely.memcached dependency
  [voineali refs #14343]
* Bug fix: Fixed reorder of css and javascript when reordering resources in the view @@reorder.
  [prospchr fixes #14337]

6.5 - (2013-04-17)
------------------