@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
     <description>EEA Content Types profile</description>
-    <version>6.6</version>
+    <version>6.8</version>
     <dependencies>
         <dependency>profile-Products.ATVocabularyManager:default</dependency>
         <dependency>profile-eea.reports:default</dependency>
